# experta

./: .travis.yml  pyproject.toml  setup.cfg
docs/source/: installation.rst  thebasics.rst
experta/: __init__.py  engine.py  fact.py  factlist.py  utils.py
