[project]
name = "experta"
version = "1.9.5.dev1"
description = "Expert Systems for Python"
readme = "README.rst"
keywords = ["knowledge-based", "inference", "engine"]
license = { text = "LGPLv3" }
classifiers = [
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: PyPy"
]
authors = [
    { name = "Roberto Abdelkader Martínez Pérez", email = "robertomartinezp@gmail.com" }
]
requires-python = ">=3.7"

dependencies=[
"tox",
"immutabledict == 1.0.0",
"schema == 0.6.7"
]
[project.urls]
Homepage= "https://github.com/nilp0inter/experta" 
Documentation="https://experta.readthedocs.io/"

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "hypothesis",
    "hypothesis-pytest",
    "pycodestyle",
    "pydocstyle",
    "codecov",
    "twine",
    "ipython",
    "build"
]

[build-system] 
requires = ["flit_core >=3.2,<4"] 
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
addopts = "--cov=experta --cov-report=xml"



[tool.pylint]
disable = "missing-docstring, invalid-name"
max-line-length = 120

[tool.pycodestyle]
show_source = true
show_pep8 = true

[tool.coverage.run]
branch = true
source = ["experta"]

[tool.coverage.report]
show_missing = true
